0.0.7
    o change dependency package for getLabelVar
    o change output path
0.0.6
    o functionality to export module settings
    o timeLim specification for interval module
0.0.5
    o support multiple variables for moduleTextParamValueVarPair in case moduleTextParamNameVarPair is specified
    o increase shiny.maxRequestSize to 10Gbs
0.0.4
    o remove moduleLabel
    o labelVars
    o fix automic splitting within a module
    o bookmark button
0.0.3
    o fix issue saving parameters for line plot, add error tracking around plot preview
0.0.2
    o include possibility to display selected modules and include default modules
0.0.1
    o initial commit